ref/tel/test/neg/e210-unresolved-reference.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e212-test

document
  field foo
    type does-not-exist
